[metadata]
name = podcast
summary = A tool for provisioning isolated environments as a service
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
project_urls =
    Source=https://github.com/pod-cast/podcast
    Tracker=https://github.com/pod-cast/podcast/issues
requires-python = >=3.5
license = Apache 2.0
license_file = LICENSE
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License Version 2.0
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages = podcast

[general]
host = 0.0.0.0
port = 5000
debug = False
kubeconfig = '/home/pickle/.kube/config'
